--- a/StarFlintSaver/MainWindow.xaml
+++ b/StarFlintSaver/MainWindow.xaml
@@ -21,6 +21,7 @@
             <SolidColorBrush x:Key="LoadSaveButtonsColor" Color="#FF291C57" />
             <SolidColorBrush x:Key="DeleteButtonsColor" Color="#FF812424" />
             <SolidColorBrush x:Key="ResyncButtonsColor" Color="#FF124B17" />
+            <SolidColorBrush x:Key="OpenFolderButtonsColor" Color="#FF6A6A00" />
             <SolidColorBrush x:Key="MessageColor" Color="#FF474B1B" />
             <SolidColorBrush x:Key="SaveMessageColor" Color="#FF866F8F" />
 
@@ -59,13 +60,19 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="1*"/>
                                 <ColumnDefinition Width="200"/>
+                                <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="3*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="{Binding SaveFileInfo, Mode=OneTime}" 
+                            <TextBlock Grid.Column="0" Text="{Binding SaveFileInfo, Mode=OneTime}"  VerticalAlignment="Center"
                                    Margin="2" FontWeight="Bold" FontSize="16"/>
                             <TextBlock Grid.Column="1" Text="{Binding ShortFileName, Mode=OneTime}" VerticalAlignment="Center"
                                    Margin="5 2 2 2" FontWeight="DemiBold"  FontSize="12" TextWrapping="Wrap"/>
-                            <TextBlock Grid.Column="2" Text="{Binding Description, Mode=OneWay}" 
+                            <Button Grid.Column="2" Margin="5" Height="16" Width="16" Background="Transparent" Command="{Binding SelectFileCommand, Mode=OneTime}">
+                                <Button.Content>
+                                    <Image Source="Images/explorer.jpg" Margin="0"/>
+                                </Button.Content>
+                            </Button>
+                            <TextBlock Grid.Column="3" Text="{Binding Description, Mode=OneWay}" 
                                    VerticalAlignment="Center" Margin="5 2 2 2" FontSize="14"
                                    TextWrapping="Wrap" Foreground="White" MinWidth="50"/>
                         </Grid>
@@ -77,7 +84,7 @@
                                 <ColumnDefinition Width="200"/>
                                 <ColumnDefinition Width="3*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="{Binding SaveFileInfo, Mode=OneTime}" 
+                            <TextBlock Grid.Column="0" Text="{Binding SaveFileInfo, Mode=OneTime}"  VerticalAlignment="Center"
                                    Margin="2" FontWeight="Bold" FontSize="16"/>
                             <TextBlock Grid.Column="1" Text="{Binding ShortFileName, Mode=OneTime}" VerticalAlignment="Center"
                                    Margin="5 2 2 2" FontWeight="DemiBold"  FontSize="12" TextWrapping="Wrap"/>
@@ -116,13 +123,19 @@
                 </ListBox.ItemContainerStyle>
             </ListBox>
 
-            <StackPanel Orientation="Horizontal" Margin="5" Grid.Column="0" Grid.Row="3">
+            <StackPanel Orientation="Horizontal" Margin="5" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2">
                 <TextBlock Text="{Binding FileManager.TotalSaveFilesCountDescription, Mode=OneWay}"
                        HorizontalAlignment="Left" VerticalAlignment="Center"
                        FontWeight="Bold" FontSize="16" Foreground="White" Margin="2 2 5 2"/>
+                
                 <Button Margin="10" MaxHeight="50" MinWidth="200" Content="Resync from disk" FontSize="20" FontWeight="Heavy" 
                         HorizontalAlignment="Left" Background="{StaticResource ResyncButtonsColor}" 
                         Command="{Binding FileManager.ResyncCommand, Mode=OneTime}"
+                        Foreground="White"/>
+
+                <Button Margin="10" MaxHeight="50" MinWidth="200" Content="Open Saves Folder" FontSize="20" FontWeight="Heavy" 
+                        HorizontalAlignment="Left" Background="{StaticResource OpenFolderButtonsColor}" 
+                        Command="{Binding FileManager.OpenRootFolderCommand, Mode=OneTime}"
                         Foreground="White"/>
 
                 <TextBlock Text="{Binding FileManager.Message, Mode=OneWay}"
